--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <title>Trasword</title>
-    <!-- ... 其他 meta 标签和样式链接 ... -->
+    <title>Trasword Translator</title>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
 </head>
 <body>
-    <!-- ... 你的 HTML 内容 ... -->
-    
-    <!-- Office JavaScript API -->
-    <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
-    
-    <!-- 确保你有一个入口点脚本 -->
-    <script type="text/javascript" src="src/taskpane/taskpane.js"></script>
+    <h1>Welcome to Trasword Translator</h1>
+    <p>This is a placeholder. Replace with your app's content.</p>
+    <script>
+        Office.onReady((info) => {
+            if (info.host === Office.HostType.Word) {
+                // 加载项初始化代码
+            }
+        });
+    </script>
 </body>
 </html>
