--- a/index.html
+++ b/index.html
@@ -5,16 +5,101 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <title>Trasword Translator</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+        #apiKeyInput { display: none; }
+    </style>
 </head>
 <body>
-    <h1>Welcome to Trasword Translator</h1>
-    <p>This is a placeholder. Replace with your app's content.</p>
+    <h1>Trasword Translator</h1>
+    <button id="settingsBtn">Settings</button>
+    <div id="apiKeyInput">
+        <input type="text" id="apiKey" placeholder="Enter OpenAI API Key">
+        <button id="saveApiKey">Save</button>
+    </div>
+    <button id="translateToChinese">Translate to Chinese</button>
+    <button id="translateToEnglish">Translate to English</button>
+    <div id="result"></div>
+
     <script>
+        let apiKey = '';
+
         Office.onReady((info) => {
             if (info.host === Office.HostType.Word) {
-                // 加载项初始化代码
+                document.getElementById('settingsBtn').onclick = toggleSettings;
+                document.getElementById('saveApiKey').onclick = saveApiKey;
+                document.getElementById('translateToChinese').onclick = () => translateSelection('Chinese');
+                document.getElementById('translateToEnglish').onclick = () => translateSelection('English');
             }
         });
+
+        function toggleSettings() {
+            const apiKeyInput = document.getElementById('apiKeyInput');
+            apiKeyInput.style.display = apiKeyInput.style.display === 'none' ? 'block' : 'none';
+        }
+
+        function saveApiKey() {
+            apiKey = document.getElementById('apiKey').value;
+            document.getElementById('apiKeyInput').style.display = 'none';
+            document.getElementById('result').innerHTML = "API Key saved!";
+        }
+
+        async function translateSelection(targetLanguage) {
+            if (!apiKey) {
+                document.getElementById('result').innerHTML = "Please set your OpenAI API Key in Settings first.";
+                return;
+            }
+
+            await Word.run(async (context) => {
+                const range = context.document.getSelection();
+                range.load("text");
+                await context.sync();
+
+                const selectedText = range.text;
+                if (selectedText) {
+                    try {
+                        const translatedText = await translateWithOpenAI(selectedText, targetLanguage);
+                        document.getElementById('result').innerHTML = `Original: ${selectedText}<br>Translated: ${translatedText}`;
+                        
+                        // Insert translated text
+                        const insertLocation = range.getInsertionPoint();
+                        insertLocation.insertText("\n" + translatedText + "\n", Word.InsertLocation.after);
+                        await context.sync();
+                    } catch (error) {
+                        document.getElementById('result').innerHTML = "An error occurred during translation: " + error.message;
+                    }
+                } else {
+                    document.getElementById('result').innerHTML = "Please select some text to translate.";
+                }
+            }).catch(error => {
+                console.error(error);
+                document.getElementById('result').innerHTML = "An error occurred during translation.";
+            });
+        }
+
+        async function translateWithOpenAI(text, targetLanguage) {
+            const response = await fetch('https://api.openai.com/v1/chat/completions', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                    'Authorization': `Bearer ${apiKey}`
+                },
+                body: JSON.stringify({
+                    model: "gpt-3.5-turbo",
+                    messages: [
+                        {role: "system", content: `You are a translator. Translate the following text to ${targetLanguage}. Only provide the translation, no explanations.`},
+                        {role: "user", content: text}
+                    ]
+                })
+            });
+
+            if (!response.ok) {
+                throw new Error(`HTTP error! status: ${response.status}`);
+            }
+
+            const data = await response.json();
+            return data.choices[0].message.content.trim();
+        }
     </script>
 </body>
 </html>
